first navbar aproach

--- a/index.html
+++ b/index.html
@@ -1,12 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="src/css/main.css" />
-    <link rel="stylesheet" href="src/css/reset.css" />
-    <title>Document</title>
-  </head>
-  <body></body>
-</html>
+	<html lang="en">
+	<head>
+	    <meta charset="UTF-8">
+	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+		<title>Document</title>
+		<link href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC|Open+Sans" rel="stylesheet">
+        <link rel="stylesheet" href="src/css/main.css" />
+        <link rel="stylesheet" href="src/css/reset.css" />
+	</head>
+	<body>
+	    <header>
+	        <div>
+	            <a>News</a>
+	            <a>Events</a>
+	            <a>Bussines</a>
+	            <a>AMas</a>
+	            <a>Spaces</a>
+	        </div>
+	        <div>
+	            <div>
+	                <a>LATEST</a>
+	                <a>HARDWORK</a>
+	                <a>PLUGGED</a>
+	                <a>THE NEXT POLICE</a>
+	                <a>FUNDAMENTALS</a>
+	                <a>IOT LAB</a>
+	                <a>INVESTING 2.0</a>
+	            </div>
+	
+	            <div>
+	                <div>v.search</div>
+	                <div>v.conf</div>
+	                <span>STARTS IN</span>
+	                <span>33:15:18:32</span>
+	                <span>GET TICKETS</span>
+	            </div>
+	
+			</div>
+			<div>
+				The TNW2019 schedule is live! Find out what our lineup of 200+ speakers will talk about =>
+			</div>
+	    </header>
+	</body>
+	</html> 
