feat(hero) added styles and html

--- a/index.html
+++ b/index.html
@@ -1,46 +1,77 @@
 <!DOCTYPE html>
-	<html lang="en">
-	<head>
-	    <meta charset="UTF-8">
-	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-		<title>Document</title>
-		<link href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC|Open+Sans" rel="stylesheet">
-        <link rel="stylesheet" href="src/css/main.css" />
-        <link rel="stylesheet" href="src/css/reset.css" />
-	</head>
-	<body>
-	    <header>
-	        <div>
-	            <a>News</a>
-	            <a>Events</a>
-	            <a>Bussines</a>
-	            <a>AMas</a>
-	            <a>Spaces</a>
-	        </div>
-	        <div>
-	            <div>
-	                <a>LATEST</a>
-	                <a>HARDWORK</a>
-	                <a>PLUGGED</a>
-	                <a>THE NEXT POLICE</a>
-	                <a>FUNDAMENTALS</a>
-	                <a>IOT LAB</a>
-	                <a>INVESTING 2.0</a>
-	            </div>
-	
-	            <div>
-	                <div>v.search</div>
-	                <div>v.conf</div>
-	                <span>STARTS IN</span>
-	                <span>33:15:18:32</span>
-	                <span>GET TICKETS</span>
-	            </div>
-	
-			</div>
-			<div>
-				The TNW2019 schedule is live! Find out what our lineup of 200+ speakers will talk about =>
-			</div>
-	    </header>
-	</body>
-	</html> 
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Document</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC|Open+Sans"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="src/css/main.css" />
+    <link rel="stylesheet" href="src/css/reset.css" />
+  </head>
+  <body>
+    <header>
+      <div>
+        <a>News</a>
+        <a>Events</a>
+        <a>Bussines</a>
+        <a>AMas</a>
+        <a>Spaces</a>
+      </div>
+      <div>
+        <div>
+          <a>LATEST</a>
+          <a>HARDWORK</a>
+          <a>PLUGGED</a>
+          <a>THE NEXT POLICE</a>
+          <a>FUNDAMENTALS</a>
+          <a>IOT LAB</a>
+          <a>INVESTING 2.0</a>
+        </div>
+
+        <div>
+          <div>v.search</div>
+          <div>v.conf</div>
+          <span>STARTS IN</span>
+          <span>33:15:18:32</span>
+          <span>GET TICKETS</span>
+        </div>
+      </div>
+      <div>
+        The TNW2019 schedule is live! Find out what our lineup of 200+ speakers
+        will talk about =>
+      </div>
+    </header>
+
+    <!-- wrapper -->
+    <div class="wrapper">
+      <!-- hero section -->
+      <div class="hero text-white">
+        <div class="hero-col-1 dark">
+          <a href="" class="ad">
+            <div class="date">Friday — April 5, 2019</div>
+            <h2 class="text-white">
+              We’re losing control of tech’s future – here’s how we can reclaim
+              it
+            </h2>
+            <ul class="ad-ul">
+              <li>by<a href="">Ailsa Sherrington</a></li>
+              <li>
+                <a href=""><i>asa</i>1 hour ago</a>
+              </li>
+              <li><i>sas</i>6</li>
+            </ul>
+          </a>
+        </div>
+        <div class="hero-col-2">
+          <div class="hero-col-3 dark">sasa</div>
+          <div class="hero-col-3 dark">sasa</div>
+        </div>
+      </div>
+    </div>
+    <!-- end of wrapper -->
+  </body>
+</html>
