added feat(hero) worked on media query

--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@
 	</header>
 
 	<!-- wrapper -->
-	<div class="hero">
+	<div class="wrapper">
 		<!-- hero section -->
+		<div class="hero">
 		<div class="hero-col-1 dark">
 			<article class="article-0">
 			<div class="date">Friday — April 5, 2019</div>
@@ -101,6 +102,7 @@
 			</article>
 		</div>
 		</div>
+	
 
 		<!-- Latest News section -->
 		<div class="section-2">
@@ -175,6 +177,7 @@
 		</div>
 	</div>
 	</div>
+</div>
 	<!-- end of wrapper -->
 </body>
 
