--- a/index.html
+++ b/index.html
@@ -152,28 +152,74 @@
 
 		<!-- Latest funding rounds section -->
 		<div class="section-3">
-			<h1>Latest funding rounds on Index.co ></h1>
 
+			<h1>Latest funding rounds on Index.co ></h1>
+			<h1>Add Info<span>|</span>Get Updates by email<span>|</span>See More</h1>
+			<br>
+			<span></span>
 			<div>
-				<div></div>
-				<h2>Bosch’s new blockchain smart fridge is a pretty dumb idea</h2>
-				<h3>Matthew Beedham 6 hours ago</h3>
+				<img src="src/vector/tray.svg" alt="noone">
+				<div>
+					<h1>Wedgmegood</h1>
+					<h1>$2.6M</h1>
+					<h2>SEED FUND</h2>
+				</div>
+				<span><img src="src/vector/add.svg" alt="noone"> Portals</span>
+				<span><img src="src/vector/add.svg" alt="noone"> Orchid Asia</span>
+	
+				<div>
+					<p>China-focused fund Orchid invests in online wedding marketplace WedMeGood</p>
+					<span>on VCCircle Network</span>
+				</div>
 			</div>
 			<div>
-				<div></div>
-				<h2>ContentsDeal project is putting copyright on the blockchain</h2>
-				<h3>Matthew Beedham 6 hours ago</h3>
-			</div>
-			<div>
-				<div></div>
-				<h2>China is reportedly trialing attention-detecting bands in schools</h2>
-				<h3>Matthew Beedham 6 hours ago</h3>
-			</div>
-			<div>
-				<div></div>
-				<h2>11 ways to educate your consumers about malware, phishing or other cyberattacks</h2>
-				<h3>Matthew Beedham 6 hours ago</h3>
-			</div>
+					<img src="src/vector/tray.svg" alt="noone">
+					<div>
+						<h1>Wedgmegood</h1>
+						<h1>$2.6M</h1>
+						<h2>SEED FUND</h2>
+					</div>
+					<span><img src="src/vector/add.svg" alt="noone"> Portals</span>
+					<span><img src="src/vector/add.svg" alt="noone"> Orchid Asia</span>
+		
+					<div>
+						<p>China-focused fund Orchid invests in online wedding marketplace WedMeGood</p>
+						<span>on VCCircle Network</span>
+					</div>
+				</div>
+	
+				<div>
+						<img src="src/vector/tray.svg" alt="noone">
+						<div>
+							<h1>Wedgmegood</h1>
+							<h1>$2.6M</h1>
+							<h2>SEED FUND</h2>
+						</div>
+						<span><img src="src/vector/add.svg" alt="noone"> Portals</span>
+						<span><img src="src/vector/add.svg" alt="noone"> Orchid Asia</span>
+			
+						<div>
+							<p>China-focused fund Orchid invests in online wedding marketplace WedMeGood</p>
+							<span>on VCCircle Network</span>
+						</div>
+					</div>
+	
+					<div>
+							<img src="src/vector/tray.svg" alt="noone">
+							<div>
+								<h1>Wedgmegood</h1>
+								<h1>$2.6M</h1>
+								<h2>SEED FUND</h2>
+							</div>
+							<span><img src="src/vector/add.svg" alt="noone"> Portals</span>
+							<span><img src="src/vector/add.svg" alt="noone"> Orchid Asia</span>
+				
+							<div>
+								<p>China-focused fund Orchid invests in online wedding marketplace WedMeGood</p>
+								<span>on VCCircle Network</span>
+							</div>
+						</div>
+				
 		</div>
 	</div>
 	</div>
