feat(section-5 , footer ): added styles and some responsiveness

--- a/index.html
+++ b/index.html
@@ -578,6 +578,7 @@
 
 
 	<!-- Section  5-->
+	<div class="secion-5-wrapper">
 	<section class="section-5 gutter-bottom">
 		<div class="col-1-4 bg-dark">
 			<div class="section-5-img"></div>
@@ -587,7 +588,7 @@
 				<span>$19</span>
 			</div>
 		</div>
-		<div class="col-1-4 bg-dark">
+		<div class="col-1-4 bg-dark gutter-left-1">
 			<div class="section-5-img"></div>
 			<div class="section-5-ad">
 				<h4>Complete Microsoft Azure Certification Prep Bundle 2019</h4>
@@ -595,7 +596,7 @@
 				<span>$19</span>
 			</div>
 		</div>
-		<div class="col-1-4 bg-dark">
+		<div class="col-1-4 bg-dark gutter-left-1">
 			<div class="section-5-img"></div>
 			<div class="section-5-ad">
 				<h4>Complete Microsoft Azure Certification Prep Bundle 2019</h4>
@@ -603,7 +604,7 @@
 				<span>$19</span>
 			</div>
 		</div>
-		<div class="col-1-4 bg-dark">
+		<div class="col-1-4 bg-dark gutter-left-1">
 			<div class="section-5-img"></div>
 			<div class="section-5-ad">
 				<h4>Complete Microsoft Azure Certification Prep Bundle 2019</h4>
@@ -614,6 +615,7 @@
 
 	</section>
 
+	
 	<div class="section-5 gutter-bottom">
 		<div class="col-1-4 bg-dark">
 			<div class="section-5-img"></div>
@@ -623,7 +625,7 @@
 				<span>$19</span>
 			</div>
 		</div>
-		<div class="col-1-4 bg-dark">
+		<div class="col-1-4 bg-dark gutter-left-1">
 			<div class="section-5-img"></div>
 			<div class="section-5-ad">
 				<h4>Complete Microsoft Azure Certification Prep Bundle 2019</h4>
@@ -631,7 +633,7 @@
 				<span>$19</span>
 			</div>
 		</div>
-		<div class="col-1-4 bg-dark">
+		<div class="col-1-4 bg-dark gutter-left-1">
 			<div class="section-5-img"></div>
 			<div class="section-5-ad">
 				<h4>Complete Microsoft Azure Certification Prep Bundle 2019</h4>
@@ -639,7 +641,7 @@
 				<span>$19</span>
 			</div>
 		</div>
-		<div class="col-1-4 bg-dark">
+		<div class="col-1-4 bg-dark gutter-left-1">
 			<div class="section-5-img"></div>
 			<div class="section-5-ad">
 				<h4>Complete Microsoft Azure Certification Prep Bundle 2019</h4>
@@ -649,9 +651,9 @@
 		</div>
 
 	</div>
-
+</div>
 	<!-- Footer-->
-	<footer>
+	<footer class="footer"> 
 		<div>
 			<div>
 				<img src="src/vector/facebook-logo.svg" alt="noone">
