fix(navbar): replaced div with navbar

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <body>
     <header class="header">
-      <div>
+      <div class="nav">
         <a>News</a>
         <a>Events ▾</a>
         <a>Business ▾</a>
